# scorpio_utils

./: CMakeLists.txt  CPPLINT.cfg  package.xml  uncrustify.cfg
.github/workflows/: ci-core.yml
include/scorpio_utils/: assert.hpp  buffered_file_saver.hpp  compare.hpp  decorators.hpp  defer.hpp  endianness.hpp  expected.hpp  literals.hpp  logger.hpp  magic_enum_include.hpp  misc.hpp  optional_utils.hpp  pointer_to_member.hpp  prelude.hpp  sat_math.hpp  stack_shared_ptr.hpp  stream_splitter.hpp  string_utils.hpp  type_traits.hpp  types.hpp  unique_function.hpp
include/scorpio_utils/debug/: stopwatch.hpp  work_timer.hpp
include/scorpio_utils/geometry/: discrete_rotation.hpp  plane.hpp  point.hpp  position.hpp  quaternion.hpp  two_sided_vector.hpp  utils.hpp
include/scorpio_utils/gps/: localization_converter.hpp
include/scorpio_utils/logger/: logger.hpp  os_logger.hpp
include/scorpio_utils/network/: ip.hpp  orderer.hpp  scorpio_udp.hpp  types.hpp  udp.hpp
include/scorpio_utils/ros/: ros_utils.hpp  ros_variable.hpp
include/scorpio_utils/testing/: gmock.hpp  lifetime_helper.hpp  mock_time_provider.hpp
include/scorpio_utils/testing/ros/: subscribe_some.hpp
include/scorpio_utils/threading/: and_then.hpp  atomic_ring_buffer.hpp  channel.hpp  eager_select.hpp  future.hpp  jthread.hpp  signal.hpp  thread_pool.hpp  thread_streams.hpp  wait_group.hpp  waitable.hpp
include/scorpio_utils/threading/declaration/: and_then_declaration.hpp  thread_pool_declaration.hpp
include/scorpio_utils/time_provider/: lazy_time_provider.hpp  system_time_provider.hpp  time_provider.hpp
include/scorpio_utils/time_utils/: time_string.hpp
src/: buffered_file_saver.cpp  string_utils.cpp
src/gps/: localization_converter.cpp
src/network/: ip.cpp  scorpio_udp.cpp  udp.cpp
src/testing/: lifetime_helper.cpp
src/threading/: signal.cpp  thread_pool.cpp  thread_streams.cpp  waitable.cpp
src/time_provider/: lazy_time_provider.cpp
src/time_utils/: time_string.cpp
test/: test_buffered_file_saver.cpp  test_compare.cpp  test_defer.cpp  test_endianness.cpp  test_expected.cpp  test_misc.cpp  test_optional_utils.cpp  test_sat_math.cpp  test_stack_shared_ptr.cpp  test_stream_splitter.cpp  test_string_utils.cpp  test_unique_function.cpp  test_visitor_overloading_helper.cpp
test/geometry/: test_discrete_rotation.cpp  test_plane.cpp  test_point.cpp  test_position.cpp  test_quaternion.cpp  test_two_sided_vector.cpp  test_utils.cpp
test/gps/: test_localization_converter.cpp
test/network/: mock_udp.cpp  test_orderer.cpp  test_scorpio_udp.cpp  test_scorpio_udp_framework.cpp  test_scorpio_udp_gmock.cpp  test_scorpio_udp_mock.cpp  test_types.cpp  test_udp.cpp
test/ros/: test_ros_utils.cpp  test_ros_variable.cpp
test/testing/: test_lifetime_helper.cpp
test/threading/: test_and_then.cpp  test_atomic_ring_buffer.cpp  test_channel.cpp  test_eager_select.cpp  test_jthread.cpp  test_signal.cpp  test_thread_pool.cpp  test_thread_streams.cpp  test_wait_group.cpp
test/time_provider/: test_lazy_time_provider.cpp  test_system_time_provider.cpp
test/time_utils/: test_time_string.cpp
