<?xml version="1.0"?>
<package format="3">
  <name>scorpio_utils</name>
  <version>0.0.0</version>
  <description>
    Test
  </description>
  <maintainer email="xxx@gmail.com">Project Scorpio</maintainer>
  <license>Proprietary</license>
  <author email="xxx@gmail.com">Igor Zaworski</author>

  <depend>backward_ros</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_black</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
